--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>On tap Javascript</title>
 </head>
-<script src="./object/object.js"></script>
+<script src="./compare/compare.js"></script>
 <body>
     Hello World
 </body>
