--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>On tap Javascript</title>
-</head>
-<script src="./function/function.js"></script>
-<body>
-    Hello World
-</body>
+  </head>
+  <body>
+    <button onclick="getListUser()">Click me</button>
+    <div class="list_user">
+
+    </div>
+    <script>
+      function getListUser() {
+        const url = "https://jsonplaceholder.typicode.com/users";
+        const xhttp = new XMLHttpRequest();
+        xhttp.open("GET", url, true);
+        xhttp.send();
+
+        xhttp.onreadystatechange = function () {
+          if (this.readyState == 4 && this.status == 200) {
+            // Typical action to be performed when the document is ready:
+            const users = JSON.parse(xhttp.responseText);
+            console.log(users)
+            //format data
+            // let userList = "";
+            // for (let user of users) {
+            //   userList += "<p>" + user.name + "<p>";
+            // }
+            // document.getElementById("list_user").innerHTML = userList;
+          }
+        };
+      }
+    </script>
+  </body>
 </html>
