--- a/index.html
+++ b/index.html
@@ -6,32 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>On tap Javascript</title>
   </head>
-  <body>
-    <button onclick="getListUser()">Click me</button>
-    <div class="list_user">
+  <body>    
+    <script >
+        const getTodo = async(id)=>{
+            let response = await fetch (`https://jsonplaceholder.typicode.com/todos/${id}`);
+            // console.log('>>>get data:', response);
+            if(response && response.status !== 200) {
+                throw new Error('Something wrongs with status code:', + response.status)
+            }
 
-    </div>
-    <script>
-      function getListUser() {
-        const url = "https://jsonplaceholder.typicode.com/users";
-        const xhttp = new XMLHttpRequest();
-        xhttp.open("GET", url, true);
-        xhttp.send();
 
-        xhttp.onreadystatechange = function () {
-          if (this.readyState == 4 && this.status == 200) {
-            // Typical action to be performed when the document is ready:
-            const users = JSON.parse(xhttp.responseText);
-            console.log(users)
-            //format data
-            // let userList = "";
-            // for (let user of users) {
-            //   userList += "<p>" + user.name + "<p>";
-            // }
-            // document.getElementById("list_user").innerHTML = userList;
-          }
-        };
-      }
+            let result = response.json();
+            return result
+        }
+
+        //promise to wait and return the result
+        getTodo(1).then(result =>{
+            console.log('check get data :', result)
+        })
+        .catch(err=>{
+            console.log('check error :', err)
+        })
     </script>
   </body>
 </html>
