--- a/index.html
+++ b/index.html
@@ -4,29 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>On tap Javascript</title>
   </head>
+  <script src="App.js"></script>
   <body>    
-    <script >
-        const getTodo = async(id)=>{
-            let response = await fetch (`https://jsonplaceholder.typicode.com/todos/${id}`);
-            // console.log('>>>get data:', response);
-            if(response && response.status !== 200) {
-                throw new Error('Something wrongs with status code:', + response.status)
-            }
-
-
-            let result = response.json();
-            return result
-        }
-
-        //promise to wait and return the result
-        getTodo(1).then(result =>{
-            console.log('check get data :', result)
-        })
-        .catch(err=>{
-            console.log('check error :', err)
-        })
-    </script>
+    Hello World
   </body>
 </html>
